[package]
name = "openapi-client-gen"
version = "0.1.0"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["openapi", "api_client","http", "async", "swagger"]
categories = ["cli", "parser-implementations", "parsing", "network-programming", "asynchronous"]
description = """
Simple CLI for generate Client Library based on OpenAPI Spec.
"""
authors = ["Sadık Ergüven <unspokenn@protonmail.com>"]
repository = "https://github.com/unspokenn/openapi-client-gen"
homepage = "https://github.com/unspokenn/openapi-client-gen"
documentation = "https://docs.rs/openapi-client-gen"
edition = "2021"
exclude = ["/ci/*", "/.github/*", "/.cirrus.yml", "/triagebot.toml", "/.idea/*", "/.git/*", ".clog.toml", ".editorconfig"]
include = ["src/*", "LICENSE-*", "README.md", "COPYRIGHT", "Cargo.toml"]

[workspace]
resolver = "2"
members = ["openapi3-parser"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
toml = { version = "0.5.9", feature = ["preserve_order"] }
serde = { version = "1.0", feature = ["derive"] }
serde_json = { version = "1.0", feature = ["preserve_order"] }
argh = "0.1.9"

warp = "0.3.2"
url = "^2.3"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
